---------------------------------------------------------------------------------------------------
Version: 1.13.0
Date: ???

  Graphics:
    - Lower render_layer of air unit from air_object to wires-above.  Projectiles and explosions should render above them.

---------------------------------------------------------------------------------------------------
Version: 1.12.0
Date: 2021-11-14

  Features:
    - Add 4 races split support

  Changes:
    - Up unit_scale on various units
    - Refactor projectiles, move damage calculation to damage_modifier. Some units got minor damage buff.
    - Buff colony damage and its range from 20 to 30 and its shooting speed at lower level.
    - Added "not-flammable" tag to ultralisk, all flying units
    - change infest movement speed to same as zerglings
    - Adjusted pollution_to_join_attack values, overall lower required values.

---------------------------------------------------------------------------------------------------
Version: 1.11.0
Date: 2021-10-23

  Changes:
    - reduce drone spawns, adjusted other units spawn
    - adjusted max_count_of_owned_units to be max_friends_around_to_spawn+2
    - Minor increase on flyer speed.
    - added min_attack_range to units

---------------------------------------------------------------------------------------------------
Version: 1.10.0
Date: 2021-09-03

  Changes:
    - changed Overlord drop range from 12 to 3
    - changed Overlord drop cooldown from 10-5s to 15-10s
    - Replaced queen healing effect to zerg's slow-down effect
    - Lurker now attacks with 2 AOE radius, max damage changed from 100 - 75
    - Mutalisk attack speed range changed from 2.5s - 1.25s to 2s - 1s
    - Ultralisk now deal 1 attack per second on max level from 1 attack every 0.75 second.
    - Defiler changed from 40 - 80 to 20 - 80
    - Guardian +33% damage, 1 attack per second.
    - bump zergling health
    - bump infested health
    - Add infested to tier 3 unit in race_setting
