@@ -186,69 +186,6 @@ function ErmZerg.make_spore_colony(level)
                     }
                 }
             }
-        },
-        {
-            type = "turret",
-            name = MOD_NAME .. '/' .. shortrange_name .. '/' .. level,
-            localised_name = { 'entity-name.' .. MOD_NAME .. '/' .. shortrange_name, level },
-            icon = "__erm_zerg__/graphics/entity/icons/buildings/advisor.png",
-            icon_size = 64,
-            flags = { "placeable-player", "placeable-enemy",  "breaths-air" },
-            max_health = ERM_UnitHelper.get_building_health(hitpoint, hitpoint * max_hitpoint_multiplier, health_multiplier, level) / 2,
-            order = "b-c-c",
-            subgroup = "enemies",
-            resistances = {
-                { type = "acid", percent = ERM_UnitHelper.get_resistance(base_acid_resistance, incremental_acid_resistance, resistance_mutiplier, level) },
-                { type = "poison", percent = ERM_UnitHelper.get_resistance(base_acid_resistance, incremental_acid_resistance, resistance_mutiplier, level) },
-                { type = "physical", percent = ERM_UnitHelper.get_resistance(base_physical_resistance, incremental_physical_resistance, resistance_mutiplier, level) },
-                { type = "fire", percent = ERM_UnitHelper.get_resistance(base_fire_resistance, incremental_fire_resistance, resistance_mutiplier, level) },
-                { type = "explosion", percent = ERM_UnitHelper.get_resistance(base_fire_resistance, incremental_fire_resistance, resistance_mutiplier, level) },
-                { type = "laser", percent = ERM_UnitHelper.get_resistance(base_electric_resistance, incremental_electric_resistance, resistance_mutiplier, level) },
-                { type = "electric", percent = ERM_UnitHelper.get_resistance(base_electric_resistance, incremental_electric_resistance, resistance_mutiplier, level) },
-                { type = "cold", percent = ERM_UnitHelper.get_resistance(base_cold_resistance, incremental_cold_resistance, resistance_mutiplier, level) }
-            },
-            healing_per_tick = ERM_UnitHelper.get_building_healing(hitpoint, max_hitpoint_multiplier, health_multiplier, level) / 2,
-            collision_box = collision_box,
-            map_generator_bounding_box = map_generator_bounding_box,
-            selection_box = selection_box,
-            shooting_cursor_size = 4,
-            rotation_speed = 1,
-            corpse = "zerg-small-base-corpse",
-            dying_explosion = "zerg-building-explosion",
-            dying_sound = ZergSound.building_dying_sound(0.75),
-            call_for_help_radius = 50,
-            folded_speed = 0.01,
-            folded_speed_secondary = 0.024,
-            folded_animation = folded_animation(),
-            working_sound = ZergSound.spore_idle(0.75),
-            integration = integration_animation(),
-            --autoplace = enemy_autoplace.enemy_worm_autoplace(0, FORCE_NAME),
-            attack_from_start_frame = true,
-            prepare_range = attack_range,
-            allow_turning_when_starting_attack = true,
-            attack_parameters = {
-                type = "projectile",
-                ammo_category = 'biological',
-                damage_modifier = ERM_UnitHelper.get_damage(base_acid_damage, incremental_acid_damage, damage_multiplier, level),
-                range = attack_shortrange,
-                cooldown = ERM_UnitHelper.get_attack_speed(base_attack_speed, incremental_attack_speed, attack_speed_multiplier, level),
-                cooldown_deviation = 0.25,
-                warmup = 12,
-                use_shooter_direction = true,
-                lead_target_for_projectile_speed = 0.2 * 0.75 * 1.5 * 1.5,
-                sound = ZergSound.sunker_attack(0.75),
-                ammo_type = {
-                    category = "biological",
-                    action = {
-                        type = "direct",
-                        action_delivery = {
-                            type = "stream",
-                            stream = "acid-stream-worm-behemoth",
-                            source_offset = { 0.15, -0.5 }
-                        }
-                    }
-                }
-            }
         }
     })
 end
